--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,10 @@
+<!doctype html>
+<html>
+<head>
+    <title>Hello playwright</title>
+</head>
+<body>
 <div id="root"></div>
 <script type="module" src="./index.tsx"></script>
+</body>
+</html>
